Fix footer map width on mobile

--- a/main/static/main/css/footer.css
+++ b/main/static/main/css/footer.css
@@ -40,6 +40,7 @@
     display: block;
     float: right;
     margin-bottom: 15px;
+    max-width: 100%;
 }
 
 @media (max-width: 750px) {
